[package]
name = "gpusage"
version = "0.1.0"
authors = ["Eito Yoneyama <yoneyama@ai.cs.ehime-u.ac.jp>"]
edition = "2021"
license-file = "LICENSE"
description = "Monitor GPU memory usage per user over time, with periodic backups"
repository = "https://github.com/rice8y/gpusage"
readme = "README.md"

[badges]
github = { repository = "rice8y/gpusage", workflow = "Rust" }

[dependencies]
chrono = "0.4.41"
clap = "4.5.38"